--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="JavaEESession05-ECommerce">
+        
+    <wb-module deploy-name="JavaEE-Example-0.0.1-SNAPSHOT">
+        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
+                
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="JavaEESession05-ECommerce"/>
+                
         <property name="java-output-path" value="/JavaEESession05-ECommerce/build/classes"/>
+        <property name="context-root" value="JavaEE-Example"/>
+            
     </wb-module>
+    
 </project-modules>
